--- a/ZaptecUsageReport/ZaptecUsageReport.csproj
+++ b/ZaptecUsageReport/ZaptecUsageReport.csproj
@@ -10,9 +10,12 @@
 
     <ItemGroup>
       <PackageReference Include="ClosedXML" Version="0.104.2" />
-      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.0" />
+      <PackageReference Include="MailKit" Version="4.14.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.1" />
       <PackageReference Include="RestSharp" Version="113.0.0" />
     </ItemGroup>
 
