update deployment documentation for Posteo SMTP configuration instead of gmail. https://di.day ✊

--- a/ZaptecUsageReport/appsettings.json
+++ b/ZaptecUsageReport/appsettings.json
@@ -4,8 +4,8 @@
     "InstallationId": "779202f1-9086-4e34-92da-1e7c9e36a17c"
   },
   "Email": {
-    "SmtpServer": "smtp.example.com",
-    "SmtpPort": 587,
+    "SmtpServer": "posteo.de",
+    "SmtpPort": 465,
     "UseSsl": true,
     "FromEmail": "noreply@example.com",
     "FromName": "Zaptec Report Service",
