Add PDF export functionality and update report generation options

--- a/ZaptecUsageReport/appsettings.json
+++ b/ZaptecUsageReport/appsettings.json
@@ -15,5 +15,8 @@
     "CcEmails": [],
     "BccEmails": [],
     "SubjectTemplate": "Zaptec Usage Report - {0:MMMM yyyy}"
+  },
+  "Pricing": {
+    "CostPerKwh": "0,286"
   }
 }
