--- a/ZaptecUsageReport/ZaptecUsageReport.csproj
+++ b/ZaptecUsageReport/ZaptecUsageReport.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.1" />
+      <PackageReference Include="QuestPDF" Version="2025.12.1" />
       <PackageReference Include="RestSharp" Version="113.0.0" />
     </ItemGroup>
 
