Add report information fields and update PDF generation to include employee, address, vehicle license plate, and model

--- a/ZaptecUsageReport/appsettings.json
+++ b/ZaptecUsageReport/appsettings.json
@@ -18,5 +18,11 @@
   },
   "Pricing": {
     "CostPerKwh": "0,286"
+  },
+  "ReportInfo": {
+    "Employee": "Max Mustermann",
+    "Address": "Musterstraße 1, 12345 Musterstadt",
+    "VehicleLicensePlate": "M-AB 1234",
+    "VehicleModel": "E-Trabbi"
   }
 }
